tests/transpiler/x/go/map_membership.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-20 09:08:21 GMT+7
package main

import (
    "fmt"
)

func main() {
    var m map[string]int = map[string]int{"a": 1, "b": 2}
    fmt.Println(func(v any) any { if v == nil { return "nil" }; return v }(func[K comparable,V any](m map[K]V, k K) bool {
    _, ok := m[k]
    return ok
}(m, "a")))
    fmt.Println(func(v any) any { if v == nil { return "nil" }; return v }(func[K comparable,V any](m map[K]V, k K) bool {
    _, ok := m[k]
    return ok
}(m, "c")))
}
